--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-go@v1.1.1
+    - uses: actions/setup-go@v1.1.3
       with:
-        go-version: "1.14.2"
+        go-version: "1.16.2"
     - name: Run tests
-      run: go test ./... -v
+      run: go test -mod=mod ./... -v
